--- a/index.html
+++ b/index.html
@@ -4,11 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+    />
     <title>Flower Market</title>
   </head>
-  <body>
-    <header>
-      <nav></nav>
+  <body class="bg-[#F5F8FF]">
+    <header class="md:mx-4 lg:mx-36">
+      <!-- nav bar -->
+      <nav class="flex justify-between items-center">
+        <div><img src="./assets/logo.png" alt="flower logo" /></div>
+        <div>
+          <ul class="flex gap-12">
+            <div class="hidden md:flex gap-12">
+              <li>Home</li>
+              <li class="text-[#8987A1]">Shop</li>
+              <li class="text-[#8987A1]">About us</li>
+            </div>
+            <li><i class="fa-solid fa-cart-shopping"></i>Cart ($56)</li>
+          </ul>
+        </div>
+      </nav>
       <section></section>
     </header>
     <main>
