--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div>
           <ul class="flex gap-12">
             <div class="hidden md:flex gap-12">
-              <li>Home</li>
+              <li class="font-bold">Home</li>
               <li class="text-[#8987A1]">Shop</li>
               <li class="text-[#8987A1]">About us</li>
             </div>
@@ -26,10 +26,89 @@
           </ul>
         </div>
       </nav>
-      <section></section>
+      <!-- banner part -->
+      <section class="block lg:flex justify-between items-center mt-60">
+        <div>
+          <h1 class="text-[65px] font-bold">
+            ALWAYS <span class="text-[#E95A08]">FRESH<br />FLOWERS</span>
+          </h1>
+          <p class="text-[22px] text-neutral-400">
+            Indulge your senses with the beauty and fragrance of <br />
+            our fresh flower shop. From classic roses to exotic <br />
+            blooms, we offer a wide variety of fresh flowers that <br />
+            are perfect for any occasion.
+          </p>
+        </div>
+        <img src="./assets/hero-flower.png" alt="banner flower" />
+      </section>
     </header>
     <main>
-      <section></section>
+      <!-- our plants section -->
+      <section class="md:mx-4 lg:mx-36">
+        <div class="text-center mt-32 mb-12">
+          <h1 class="text-[65px] font-bold">
+            <span class="text-[#E95A08]">Our</span> Plants
+          </h1>
+          <p class="text-[22px] text-neutral-400">
+            Indulge your senses with the beauty and fragrance of our fresh
+            flower shop. <br />
+            From classic roses to exotic blooms, we offer a wide variety of
+            fresh.
+          </p>
+        </div>
+      </section>
+      <section class="mx-36">
+        <div class="grid grid-cols-4 gap-43">
+          <div class="w-[270px] h-[285px]">
+            <img src="./assets/sample-flower-image.png" alt="" />
+            <h2 class="text-center">Lily Blossom</h2>
+            <h1 class="text-center font-bold">20 USD</h1>
+            <button class="bg-[#E95A08] text-white w-full">ADD To CART</button>
+          </div>
+          <div class="w-[270px] h-[285px]">
+            <img src="./assets/sample-flower-image.png" alt="" />
+            <h2 class="text-center">Lily Blossom</h2>
+            <h1 class="text-center font-bold">20 USD</h1>
+            <button class="bg-[#E95A08] text-white w-full">ADD To CART</button>
+          </div>
+          <div class="w-[270px] h-[285px]">
+            <img src="./assets/sample-flower-image.png" alt="" />
+            <h2 class="text-center">Lily Blossom</h2>
+            <h1 class="text-center font-bold">20 USD</h1>
+            <button class="bg-[#E95A08] text-white w-full">ADD To CART</button>
+          </div>
+          <div class="w-[270px] h-[285px]">
+            <img src="./assets/sample-flower-image.png" alt="" />
+            <h2 class="text-center">Lily Blossom</h2>
+            <h1 class="text-center font-bold">20 USD</h1>
+            <button class="bg-[#E95A08] text-white w-full">ADD To CART</button>
+          </div>
+          <div class="w-[270px] h-[285px]">
+            <img src="./assets/sample-flower-image.png" alt="" />
+            <h2 class="text-center">Lily Blossom</h2>
+            <h1 class="text-center font-bold">20 USD</h1>
+            <button class="bg-[#E95A08] text-white w-full">ADD To CART</button>
+          </div>
+          <div class="w-[270px] h-[285px]">
+            <img src="./assets/sample-flower-image.png" alt="" />
+            <h2 class="text-center">Lily Blossom</h2>
+            <h1 class="text-center font-bold">20 USD</h1>
+            <button class="bg-[#E95A08] text-white w-full">ADD To CART</button>
+          </div>
+          <div class="w-[270px] h-[285px]">
+            <img src="./assets/sample-flower-image.png" alt="" />
+            <h2 class="text-center">Lily Blossom</h2>
+            <h1 class="text-center font-bold">20 USD</h1>
+            <button class="bg-[#E95A08] text-white w-full">ADD To CART</button>
+          </div>
+          <div class="w-[270px] h-[285px]">
+            <img src="./assets/sample-flower-image.png" alt="" />
+            <h2 class="text-center">Lily Blossom</h2>
+            <h1 class="text-center font-bold">20 USD</h1>
+            <button class="bg-[#E95A08] text-white w-full">ADD To CART</button>
+          </div>
+        </div>
+      </section>
       <section></section>
       <section></section>
       <section></section>
