added plants lover section

--- a/index.html
+++ b/index.html
@@ -109,7 +109,35 @@
           </div>
         </div>
       </section>
-      <section></section>
+      <!-- plants lover section -->
+      <section class="flex mt-72 justify-between md:mx-4 lg:mx-36">
+        <img src="./assets/flower-store.png" alt="image of flower store" />
+        <div>
+          <h1 class="text-5xl font-bold mb-5 pb-2.5">
+            Flower & Plants <br />Lover
+          </h1>
+          <ul class="list-disc pl-10">
+            <li class="text-[22px] text-neutral-400">
+              Indulge your senses with the beauty and fragrance of our fresh
+              flower shop. <br />
+              From classic roses to exotic blooms, we offer a wide variety of
+              fresh.
+            </li>
+            <li class="text-[22px] text-neutral-400">
+              Indulge your senses with the beauty and fragrance of our fresh
+              flower shop. <br />
+              From classic roses to exotic blooms, we offer a wide variety of
+              fresh.
+            </li>
+            <li class="text-[22px] text-neutral-400">
+              Indulge your senses with the beauty and fragrance of our fresh
+              flower shop. <br />
+              From classic roses to exotic blooms, we offer a wide variety of
+              fresh.
+            </li>
+          </ul>
+        </div>
+      </section>
       <section></section>
       <section></section>
     </main>
