added latest deals section

--- a/index.html
+++ b/index.html
@@ -138,7 +138,49 @@
           </ul>
         </div>
       </section>
-      <section></section>
+      <!-- latest deals section -->
+      <section class="md:mx-4 lg:mx-36">
+        <h1 class="text-[65px] font-bold text-center mt-36 py-5">
+          <span class="text-[#E95A08]">Latest</span> D eals
+        </h1>
+        <p class="text-[22px] text-neutral-400 text-center mb-32">
+          Indulge your senses with the beauty and fragrance of our fresh flower
+          shop. <br />
+          From classic roses to exotic blooms, we offer a wide variety of fresh.
+        </p>
+        <div class="flex mb-[120px]">
+          <div>
+            <!-- class="bg-[url('')]" -->
+            <div
+              class="bg-[url('./assets/deal-bloom.png')] bg-no-repeat bg-center bg-cover w-[367px] h-[200px] flex items-center justify-center mb-[30px] rounded-2xl"
+            >
+              <p class="text-white text-center text-xl font-bold">
+                60% Off | Bloom Plant <br /><span class="border-b-2"
+                  >Shop Now</span
+                >
+              </p>
+            </div>
+            <div
+              class="bg-[url('./assets/deal-ana.png')] bg-no-repeat bg-center bg-cover w-[367px] h-[200px] flex items-center justify-center rounded-2xl"
+            >
+              <p class="text-white text-center text-xl font-bold">
+                30% Off | Ana Plant <br /><span class="border-b-2"
+                  >Shop Now</span
+                >
+              </p>
+            </div>
+          </div>
+          <div
+            class="bg-[url('./assets/deal-zabo.png')] bg-no-repeat bg-center bg-cover w-full flex items-center justify-center ml-[30px] rounded-3xl"
+          >
+            <p class="text-white text-center text-[40px] font-bold">
+              25% Off | Zabo Plant <br /><span class="border-b-2"
+                >Shop Now</span
+              >
+            </p>
+          </div>
+        </div>
+      </section>
       <section></section>
     </main>
     <footer></footer>
