added newsletter section

--- a/index.html
+++ b/index.html
@@ -150,7 +150,6 @@
         </p>
         <div class="flex mb-[120px]">
           <div>
-            <!-- class="bg-[url('')]" -->
             <div
               class="bg-[url('./assets/deal-bloom.png')] bg-no-repeat bg-center bg-cover w-[367px] h-[200px] flex items-center justify-center mb-[30px] rounded-2xl"
             >
@@ -181,7 +180,26 @@
           </div>
         </div>
       </section>
-      <section></section>
+      <!-- join newsletter section -->
+      <section
+        class="bg-[url('./assets/news-letter-bg.png')] bg-no-repeat bg-center bg-cover"
+      >
+        <div class="py-[200px] flex-col items-center justify-center">
+          <h1 class="text-white text-5xl font-bold text-center">
+            Join the colorful Bunch
+          </h1>
+          <div class="flex justify-center items-center py-[25px]">
+            <input
+              class="bg-white text-neutral-400 w-[600px] px-5 py-4"
+              type="text"
+              placeholder="Write email"
+            />
+            <button class="text-white bg-[#E95A08] font-bold px-14 py-4">
+              Subscribe
+            </button>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
