added footer section

--- a/index.html
+++ b/index.html
@@ -117,23 +117,29 @@
             Flower & Plants <br />Lover
           </h1>
           <ul class="list-disc pl-10">
-            <li class="text-[22px] text-neutral-400">
-              Indulge your senses with the beauty and fragrance of our fresh
-              flower shop. <br />
-              From classic roses to exotic blooms, we offer a wide variety of
-              fresh.
+            <li class="text-[22px] text-neutral-400 pb-5">
+              Indulge your senses in the enchanting beauty and captivating
+              fragrance of our <br />
+              fresh flower shop. From timeless roses to rare and exotic blooms,
+              we offer <br />a diverse selection of freshly picked flowers to
+              brighten any moment <br />
+              and express every emotion.
+            </li>
+            <li class="text-[22px] text-neutral-400 pb-5">
+              Indulge your senses in the enchanting beauty and captivating
+              fragrance of our <br />
+              fresh flower shop. From timeless roses to rare and exotic blooms,
+              we offer <br />a diverse selection of freshly picked flowers to
+              brighten any moment <br />
+              and express every emotion.
             </li>
             <li class="text-[22px] text-neutral-400">
-              Indulge your senses with the beauty and fragrance of our fresh
-              flower shop. <br />
-              From classic roses to exotic blooms, we offer a wide variety of
-              fresh.
-            </li>
-            <li class="text-[22px] text-neutral-400">
-              Indulge your senses with the beauty and fragrance of our fresh
-              flower shop. <br />
-              From classic roses to exotic blooms, we offer a wide variety of
-              fresh.
+              Indulge your senses in the enchanting beauty and captivating
+              fragrance of our <br />
+              fresh flower shop. From timeless roses to rare and exotic blooms,
+              we offer <br />a diverse selection of freshly picked flowers to
+              brighten any moment <br />
+              and express every emotion.
             </li>
           </ul>
         </div>
@@ -201,6 +207,57 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <!-- footer section -->
+    <footer class="bg-[#FEFEFF] px-[160px] py-[50px]">
+      <div class="flex justify-between">
+        <div>
+          <img src="./assets/logo.png" alt="" />
+          <p class="text-[22px] text-neutral-400">
+            Indulge your senses with the beauty <br />and fragrance of our fresh
+            flower shop.
+          </p>
+        </div>
+        <div>
+          <ul class="text-[18px] text-neutral-400">
+            <li class="pb-[20px]">Home</li>
+            <li class="pb-[20px]">About Us</li>
+            <li class="pb-[20px]">Blog</li>
+            <li class="pb-[20px]">FAQ</li>
+            <li>Contact Us</li>
+          </ul>
+        </div>
+        <div>
+          <ul class="text-[18px] text-neutral-400">
+            <li class="pb-[20px]">Features</li>
+            <li class="pb-[20px]">Pricing</li>
+            <li class="pb-[20px]">Privacy Policy</li>
+            <li class="pb-[20px]">Terms of Service</li>
+            <li>Help Center</li>
+          </ul>
+        </div>
+        <div class="flex gap-2">
+          <img
+            class="w-[36px] h-[36px]"
+            src="./assets/icon-linkedin.png"
+            alt=""
+          />
+          <img
+            class="w-[28px] h-[32px]"
+            src="./assets/icon-twitter.png"
+            alt=""
+          />
+          <img
+            class="w-[36px] h-[36px]"
+            src="./assets/icon-facebook.png"
+            alt=""
+          />
+          <img
+            class="w-[36px] h-[36px]"
+            src="./assets/icon-youtube.png"
+            alt=""
+          />
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
