--- a/index.html
+++ b/index.html
@@ -111,7 +111,15 @@
       </section>
       <!-- plants lover section -->
       <section class="flex mt-72 justify-between md:mx-4 lg:mx-36">
-        <img src="./assets/flower-store.png" alt="image of flower store" />
+        <div class="relative">
+          <img src="./assets/flower-store.png" alt="image of flower store" />
+          <img
+            class="w-[250px] h-[250px] absolute left-[70%] bottom-[77%]"
+            src="./assets/trusted-badge.png"
+            alt=""
+          />
+        </div>
+
         <div>
           <h1 class="text-5xl font-bold mb-5 pb-2.5">
             Flower & Plants <br />Lover
