fixed badge shadow

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <div class="relative">
           <img src="./assets/flower-store.png" alt="image of flower store" />
           <img
-            class="w-[250px] h-[250px] absolute left-[70%] bottom-[77%] drop-shadow-[4px_6px_0_rgba(0,0,0,0.4)] rotate-[8deg]"
+            class="w-[250px] h-[250px] absolute left-[70%] bottom-[77%] drop-shadow-[4px_6px_2px_rgba(0,0,0,0.3)] rotate-[8deg]"
             src="./assets/trusted-badge.png"
             alt=""
           />
